Add Floorplan endpoints Fix Geofence endpoints to store all polygons in single document Fix mongoose model validators to have error messages Fix eslint Errors Fix errorhandler.js to send err.name and err.message Update Swagger documentation
