# src/controllers/sensorControllers.js
@@ -4,22 +4,22 @@ const errorResponse = require('../libs/errorHandler');
 // create document for a floorplan in db
 // use schema defined in models/floorplanModel.js
 const floorplanAdd = async (req, res) => {
-    const floorplan = new Floorplan({
-        data: req.body.data,
-        contentType: req.body.contentType,
-    });
-
     // using mongoose
     try {
+        const floorplan = new Floorplan({
+            data: req.body.data,
+            contentType: req.body.contentType,
+        });
+
         const oldFloorplan = await Floorplan.find({});
         if (oldFloorplan !== null) {
             res.status(409).json({
                 message: 'A floorplan already exists. Only 1 floorplan can be added at a time',
-            })
+            });
             return;
         }
         const newFloorplan = await floorplan.save();
-        res.set('Location', `${req.protocol}://${req.hostname}${req.baseUrl}/get`)
+        res.set('Location', `${req.protocol}://${req.hostname}${req.baseUrl}/get`);
         res.status(201).json({
             message: `Added floorplan with id = ${newFloorplan.id}`,
         });
@@ -54,12 +54,12 @@ const floorplanUpdate = async (req, res) => {
         );
         if (floorplan === null) {
             res.status(404).json({
-                message: `No floorplan in database`,
+                message: 'No floorplan in database',
             });
             return;
         }
         res.status(200).json({
-            message: `Updated floorplan`,
+            message: 'Updated floorplan',
             updatedObject: floorplan,
         });
     } catch (err) {
@@ -70,9 +70,9 @@ const floorplanUpdate = async (req, res) => {
 // delete floorplan document
 const floorplanDelete = async (req, res) => {
     try {
-        const floorplan = await Floorplan.deleteOne({});
+        await Floorplan.findOneAndDelete({});
         res.status(200).json({
-            message: `Deleted floorplan`,
+            message: 'Deleted floorplan',
         });
     } catch (err) {
         errorResponse(err, res);
